server/compilers/goLiteJS/src/test/ml1/valid/exp2.go
// primitive unary operations as expressions
package main

func main() {
    _ = +a
    _ = -a
    _ = !a
    _ = ^a
}
