server/compilers/goLiteJS/src/test/ml1/invalid/func5.go
// comma after last parameter
package main

func f(a int,) {
    return
}
